--- a/9512027v1/9512027v1.tex
+++ b/9512027v1/9512027v1.tex
@@ -24,7 +24,7 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
+%\usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 \usepackage[letterpaper, margin=1.4in]{geometry}
 
@@ -117,7 +117,7 @@ not possibly accomplish what Bohm had claimed.
 
 Occasionally I would hear that there might be some flaw in the proof of von
 Neumann, but I was advised not to worry about this because there were
-other, {\it even more convincing\/}, proofs of von Neumann's result! What
+other, {\it even more convincing}, proofs of von Neumann's result! What
 an embarrassment of riches! For example, according to Eugene Wigner \cite[page
 291]{Wigner1} ``the proof he [von Neumann] published \dots, though it was
 made much more convincing later on by Kochen and Specker, still uses
@@ -144,10 +144,10 @@ in fact, vindicated by the outcome.''
 
 In view of what I've so far said, it would be natural to suppose that the
 two books with which I shall be concerned in this essay, {\it The Undivided
-Universe\/} by Bohm and Basil J. Hiley, which is a presentation of Bohm's
+Universe} by Bohm and Basil J. Hiley, which is a presentation of Bohm's
 1952 theory incorporating some later developments, many of which represent
 joint work with Bohm's long-time collaborator Hiley, and Bell's {\it
-Speakable and Unspeakable in Quantum Mechanics\/}, which collects all of
+Speakable and Unspeakable in Quantum Mechanics}, which collects all of
 Bell's work, up to 1987, on the foundations of quantum mechanics, are in
 diametric opposition, with the former defending hidden variables and the
 latter defending quantum orthodoxy. This, however, is not so; in fact, Bell
@@ -163,7 +163,7 @@ he was one of the sanest and most rational of men. Bell did not---as did in
 fact Bohm---at some point convert from a defender to a critic of quantum
 orthodoxy; he was always unhappy with traditional quantum mechanics, and
 reports \cite{Bernstein} that even as a student learning quantum theory ``I
-hesitated to think it might be wrong, but I {\it knew\/} that it was
+hesitated to think it might be wrong, but I {\it knew} that it was
 rotten.''
 
 But what, you might well ask, of the statements of Wigner and Gell-Mann, in
@@ -244,15 +244,15 @@ rather than solved.  The account of Bohm and Hiley is quite detailed;
 Bell's is rather brief. The presentation of Bohm and Hiley is well written and
 insightfully describes a broad spectrum of important physics. Bell's
 is almost always precisely on target and almost never less than
-thoroughly masterful. Whereas Bohm and Hiley provide {\it an\/}
-explanation, it is Bell that supplies {\it the \/} explanation.  Bell's
+thoroughly masterful. Whereas Bohm and Hiley provide {\it an}
+explanation, it is Bell that supplies {\it the} explanation.  Bell's
 presentation affords by far the deeper appreciation of the essence of
 Bohmian mechanics, of its virtues and of its limitations.
 
 \section{Nonlocality}
 
 One of the most remarkable implications of quantum theory---a {\it
-genuine\/} implication, unlike those which intrigued me when I was younger
+genuine} implication, unlike those which intrigued me when I was younger
 and which reflect the prejudices of their proponents far more than they do
 anything about the demands of nature---is that of quantum nonlocality. It
 is to this that the main title of the book of Bohm and Hiley refers. No
@@ -287,7 +287,7 @@ fundamental mathematical structure of quantum mechanics, as provided by a
 wave function on the configuration space of a many-particle system. Thus,
 since the very same wave function is also central to Bohmian mechanics, we
 should not be surprised to find, as indeed we do, that it, too, is
-nonlocal. Bohmian mechanics, however, is {\it explicitly\/} nonlocal while the
+nonlocal. Bohmian mechanics, however, is {\it explicitly} nonlocal while the
 nonlocality of orthodox quantum theory is ambiguous and merely
 implicit---or so it was until 1964, when Bell showed that the very
 predictions of standard quantum theory provide unmistakable, though
@@ -311,8 +311,8 @@ distant piece.
 
 Bohm of course was well aware of these features of his scheme, and has
 given them much attention. However, it must be stressed that, to the
-present writer's knowledge, there is no {\it proof\/} that {\it any\/}
-hidden variable account of quantum mechanics {\it must\/} have this
+present writer's knowledge, there is no {\it proof} that {\it any}
+hidden variable account of quantum mechanics {\it must} have this
 extraordinary character. It would therefore be interesting, perhaps, to
 pursue some further ``impossibility proofs,'' replacing the arbitrary
 axioms objected to above by some condition of locality, or of separability
@@ -406,12 +406,12 @@ completion. (Bell, page 132)
 \eq
 and, indeed, quite emphatic
 \bq It is important to note that to the limited degree to which {\it
-determinism\/} plays a role in the EPR argument, it is not assumed but
-{\it inferred\/}. What is held sacred is the principle of `local
+determinism} plays a role in the EPR argument, it is not assumed but
+{\it inferred}. What is held sacred is the principle of `local
 causality'---or `no action at a distance'\dots
 
 It is remarkably difficult to get this point across, that determinism is
-not a {\it presupposition\/} of the analysis. (Bell, page 143)
+not a {\it presupposition} of the analysis. (Bell, page 143)
 \eq
 \bq Let me summarize once again the logic that leads to the impasse. The
 EPRB correlations are such that the result of the experiment on one side
@@ -421,7 +421,7 @@ influence on the other, we seem obliged to admit that the results on both
 sides are determined in advance anyway, independently of the intervention
 on the other side, by signals from the source and by the local magnet
 setting. But this has implications for non-parallel settings which conflict
-with those of quantum mechanics. So we {\it cannot\/} dismiss intervention
+with those of quantum mechanics. So we {\it cannot} dismiss intervention
 on one side as a causal influence on the other. (Bell, page 149)
 \eq
 \bq  \dots\  Despite my insistence that the determinism was inferred
@@ -474,7 +474,7 @@ Neumann's, by at least six years!
 Be that as it may, the question arises as to just where these proofs go
 wrong. It is with precisely this question that Bell begins his analysis of
 the problem of hidden variables in quantum mechanics, in a paper
-\cite{Bell2} in the {\it Reviews of Modern Physics\/} written before his
+\cite{Bell2} in the {\it Reviews of Modern Physics} written before his
 EPR paper (1964) but published only in 1966:
 
 \bq The realization that von Neumann's proof is of
@@ -493,7 +493,7 @@ footnote on this sentence Bell  informs us that
 \bq\noindent In particular the analysis of Bohm seems to lack clarity, or else
 accuracy. He fully emphasizes the role of the experimental arrangement.
 However, it seems to be implied \dots\  that the circumvention of the theorem
-{\it requires\/}  the association of {\it hidden\/} variables with the
+{\it requires}  the association of {\it hidden} variables with the
 apparatus as well as with the system observed. The scheme of Section 2
 is a counter example to this. Moreover, it will be seen in Section 3 that
 if the essential additivity assumption of von Neumann were granted, hidden
@@ -508,7 +508,7 @@ parameters that belonged only to the observed system itself and were not
 affected by the apparatus. (BH, page 118)
 \eq
 
-As Bell said, what was essential for von Neumann's argument {\it per se\/}
+As Bell said, what was essential for von Neumann's argument {\it per se}
 was his linearity assumption, not the location of the hidden parameters.
 However, we need not go into this linearity assumption here because
 Gleason, Bell, and Kochen and Specker have shown that it is, in fact,
@@ -518,7 +518,7 @@ invoking this assumption can, by a different argument, also be proven
 without it. Rather, the critical assumption behind just about all of the
 proofs of the impossibility of hidden variables (except, it might be
 argued, for those revolving around locality) is that of {\it
-noncontextuality\/}, ``that measurement of an observable must yield the
+noncontextuality}, ``that measurement of an observable must yield the
 same value independently of what other measurements may be made
 simultaneously'' rather than depending upon ``the complete disposition of
 the apparatus'' (Bell, page 9).
@@ -599,10 +599,10 @@ nonrelativistic theory---rather than, like the Copenhagen interpretation, in
 epistemology. Bohmian mechanics directly governs the behavior of the basic
 elements of this ontology and it is out of this behavior that the
 observational principles expressed by the quantum formalism emerge.
-However, the essential point is not {\it some\/} ontology versus {\it no\/}
-ontology but a {\it clear\/} ontology versus a {\it vague\/} ontology.
-After all, one would imagine that any physical theory must at {\it some\/}
-level invoke {\it some\/} ontology, and, in fact, the Copenhagen
+However, the essential point is not {\it some} ontology versus {\it no}
+ontology but a {\it clear} ontology versus a {\it vague} ontology.
+After all, one would imagine that any physical theory must at {\it some}
+level invoke {\it some} ontology, and, in fact, the Copenhagen
 interpretation presupposes the classical ontology (and it would seem from
 what is so often written even classical physics) on the macroscopic
 level---without which, so the argument goes, there could be no coherent
@@ -722,7 +722,7 @@ the system under consideration.
 What concerns us here is the fact that the dynamics for Bohmian mechanics
 is thus completely defined by Schr\"odinger's equation together with the
 guiding equation, and there is neither need nor room for any further {\it
-axioms\/} involving the quantum potential! Thus the quantum potential
+axioms} involving the quantum potential! Thus the quantum potential
 should not be regarded as fundamental, and we should not allow it to
 obscure, as it all too easily tends to do, the most basic structure
 defining Bohmian mechanics.
@@ -876,7 +876,7 @@ favor of a theory that ``still works consistently as long as we have a
 suitable guidance condition.''  But even at this point, at which ``there is
 no extended particle that is spinning,'' they still find it necessary to
 say that ``spin represents only some average property  of the {\it
-circulating\/} orbital motion'' (BH, page  221) [my emphasis].
+circulating} orbital motion'' (BH, page  221) [my emphasis].
 
 {}From Bell, however, we get an entirely different impression. The guiding
 equation $v=J/\rho$ serves as well to define Bohmian mechanics for a
@@ -946,7 +946,7 @@ Copenhagen interpretation to the many-worlds interpretation---into a
 physical theory. It emerges if one merely insists that the Schr\"odinger
 wave function be relevant to the motion of particles. (And notice that if
 we are to have a clear physical theory at all, the wave function had better be
-relevant to the behavior of {\it something\/} of clear physical
+relevant to the behavior of {\it something} of clear physical
 significance!) In other words, Bohmian mechanics arises from
 Schr\"odinger's equation when (perhaps naively) we insist upon the simplest
 ontology---particles described by their positions---and seek a natural
@@ -958,7 +958,7 @@ understand how this can be, as well as to develop some appreciation for the
 many very difficult remaining open problems in the foundations of quantum
 theory, such as that of the tension between nonlocality and Lorentz
 invariance, the books of Bell and of Bohm and Hiley are indispensable. Read
-them---first Bell, then Bohm and Hiley, and {\it then Bell again!\/} You
+them---first Bell, then Bohm and Hiley, and {\it then Bell again!} You
 will be richly rewarded for your efforts. If you don't quite develop a
 clear conception of what the quantum revolution in fact is, you will at
 least be confident about what it is not!
@@ -971,74 +971,74 @@ thanks. This work was supported in part by NSF Grant No. DMS--9305930.
 \begin{thebibliography}{99}
 
 \bibitem{BH} D. Bohm and B. J. Hiley:  {\it The Undivided
-Universe: An Ontological Interpretation of Quantum Theory.\/} London:
+Universe: An Ontological Interpretation of Quantum Theory.} London:
 Routledge 1993.
 
 \bibitem{Bell} J. S. Bell: {\it Speakable and unspeakable in
-quantum mechanics.\/}  Cambridge: Cambridge University Press 1987.
+quantum mechanics.}  Cambridge: Cambridge University Press 1987.
 
-\bibitem{Heisenberg} W. Heisenberg: {\it Physics and Philosophy.\/} New York:
+\bibitem{Heisenberg} W. Heisenberg: {\it Physics and Philosophy.} New York:
 Harper and Row 1958, page 129.
 
 \bibitem{LL} L. D. Landau and E. M. Lifshitz:
-{\it Quantum Mechanics: Non-Relativistic Theory.\/} Translated from the Russian
+{\it Quantum Mechanics: Non-Relativistic Theory.} Translated from the Russian
 by J. B. Sykes and J. S. Bell. New York: Pergamon Press 1958, page 2.
 
-\bibitem{Moore} W. Moore: {\it Schr\"odinger.\/} Cambridge: Cambridge
+\bibitem{Moore} W. Moore: {\it Schr\"odinger.} Cambridge: Cambridge
 University Press 1989, page 228.
 
 \bibitem{Einstein} P. A. Schilpp, ed.: {\it Albert Einstein,
-Philosopher-Scientist.\/} Evanston, Ill.:Library of Living Philosophers
+Philosopher-Scientist.} Evanston, Ill.:Library of Living Philosophers
 1949, page 666.
 
 \bibitem{vN} J. von Neumann: {\it Mathematical Foundations of Quantum
-Mechanics.\/} Translated by R. T. Beyer. Princeton: Princeton University
+Mechanics.} Translated by R. T. Beyer. Princeton: Princeton University
 Press 1955, page 325.  First published in German in 1932.
 
 \bibitem{born} M. Born: {\it Natural Philosophy of Cause and
-Chance.\/} Oxford:  Oxford University Press 1949, page 109.
+Chance.} Oxford:  Oxford University Press 1949, page 109.
 
 \bibitem{Bohm52} D. Bohm: A suggested interpretation of the
 quantum theory in terms of ``hidden'' variables, Parts I and II,  {\it Phys.
-Rev.\/}  {\bf 85}, 166--179 and 180--193 (1952).
+Rev.}  {\bf 85}, 166--179 and 180--193 (1952).
 
 \bibitem{Wigner1} E. P. Wigner: Interpretation of quantum mechanics, in
-{\it Quantum Theory and Measurement,\/} J. A. Wheeler and W. H. Zurek, eds.
+{\it Quantum Theory and Measurement,} J. A. Wheeler and W. H. Zurek, eds.
 Princeton: Princeton University Press 1983.
 
 \bibitem{Wigner2} E. P. Wigner: Review of quantum mechanical measurement
 problem, in {\it Quantum Optics, Experimental Gravity and Measurement
-Theory,\/} P. Meystre and M. O. Scully, eds. New York: Plenum Press 1983,
+Theory,} P. Meystre and M. O. Scully, eds. New York: Plenum Press 1983,
 page 53.
 
-\bibitem{GM} M. Gell-Mann: {\it The Quark and the Jaguar.\/} New York: W.
+\bibitem{GM} M. Gell-Mann: {\it The Quark and the Jaguar.} New York: W.
 H. Freeman and Company 1994, pages 170--172.
 
 \bibitem{Speiser} D. Speiser: Ce qu'il est possible de dire et ce qui ne peut
 \^etre dit en m\'ecanique quantique (d'apr\`es J.S. Bell), {\it Revue des
-Questions Scientifiques\/} {\bf 159}, 365-369 (1988).
+Questions Scientifiques} {\bf 159}, 365-369 (1988).
 
-\bibitem{Bernstein} J. Bernstein: {\it Quantum Profiles.\/} Princeton:
+\bibitem{Bernstein} J. Bernstein: {\it Quantum Profiles.} Princeton:
 Princeton University Press 1991, page 20.
 
 \bibitem{Bell1} J. S. Bell: On the Einstein-Podolsky-Rosen paradox, {\it
-Physics\/}  {\bf 1}, 195--200 (1964).
+Physics}  {\bf 1}, 195--200 (1964).
 
 \bibitem{Aspect}  A. Aspect, J. Dalibard, and G. Roger: Experimental test
 of Bell's inequalities using time-varying analyzers, {\it Phys. Rev.
-Lett.\/} {\bf 49}, 1804-1807 (1982).
+Lett.} {\bf 49}, 1804-1807 (1982).
 
-\bibitem{Gleason} A. M. Gleason: {\it J. Math. and Mech.\/} {\bf 6}, 885
+\bibitem{Gleason} A. M. Gleason: {\it J. Math. and Mech.} {\bf 6}, 885
 (1957).
 
-\bibitem{KS} S. Kochen and E. P. Specker: {\it J. Math. and Mech.\/} {\bf
+\bibitem{KS} S. Kochen and E. P. Specker: {\it J. Math. and Mech.} {\bf
 17}, 59 (1967).
 
-\bibitem{JP} J. M. Jauch and C. Piron: {\it Helv. Phys. Acta.\/} {\bf 36},
+\bibitem{JP} J. M. Jauch and C. Piron: {\it Helv. Phys. Acta.} {\bf 36},
 827 (1963).
 
 \bibitem{Bell2} J. S. Bell: On the problem of hidden variables in quantum
-mechanics, {\it Rev. Mod. Phys.\/} {\bf 38}, 447--452 (1966).
+mechanics, {\it Rev. Mod. Phys.} {\bf 38}, 447--452 (1966).
 
 \bibitem{DDGZ} M. Daumer, D. D\"{u}rr, S. Goldstein, and
 N. Zangh\`{\i}:
@@ -1046,14 +1046,14 @@ On the role of operators in quantum theory. In preparation.
 
 \bibitem{DGZ} D. D\"{u}rr, S. Goldstein, N. Zangh\`{\i}:
 Quantum equilibrium and the origin of absolute uncertainty,  {\it J. Stat.
-Phys.\/} {\bf 67}, 843--907 (1992); Quantum mechanics, randomness, and
-deterministic reality,  {\it Phys. Lett. A\/} {\bf 172}, 6--12 (1992).
+Phys.} {\bf 67}, 843--907 (1992); Quantum mechanics, randomness, and
+deterministic reality,  {\it Phys. Lett. A} {\bf 172}, 6--12 (1992).
 
-\bibitem{bohm} D. Bohm: {\it Wholeness and the Implicate Order.\/} New
+\bibitem{bohm} D. Bohm: {\it Wholeness and the Implicate Order.} New
 York: Routledge 1980, page 80.
 
 \bibitem{survey} K. Berndl, M. Daumer, D. D\"{u}rr, S. Goldstein, N.
-Zangh\`{\i}: A survey of Bohmian mechanics, {\it Il Nuovo Cimento\/}. To
+Zangh\`{\i}: A survey of Bohmian mechanics, {\it Il Nuovo Cimento}. To
 appear.
 
 \end{thebibliography}
