--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Peter Su at 2019-03-07 10:25:21 -0500 
+%% Created for Peter Su at 2019-03-08 10:30:11 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Struyve:2007fs,
+	Archiveprefix = {arXiv},
+	Author = {Struyve, W.},
+	Date-Added = {2019-03-08 15:29:22 +0000},
+	Date-Modified = {2019-03-08 15:30:11 +0000},
+	Doi = {10.1088/0034-4885/73/10/106001},
+	Eprint = {0707.3685},
+	Journal = {Rept. Prog. Phys.},
+	Note = {\href{https://arxiv.org/abs/0707.3685}{arXiv:0707.3685}},
+	Pages = {106001},
+	Primaryclass = {quant-ph},
+	Slaccitation = {%%CITATION = ARXIV:0707.3685;%%},
+	Title = {{Pilot-wave theory and quantum fields}},
+	Volume = {73},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1088/0034-4885/73/10/106001}}
 
 @article{Goldstein1996,
 	Author = {Goldstein, Sheldon},
