--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,27 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-03-06 22:12:35 -0500 
+%% Created for Pete Su at 2019-03-07 18:52:38 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bohm1987,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1987PhR...144..321B},
+	Author = {{Bohm}, D. and {Hiley}, B.~J. and {Kaloyerou}, P.~N.},
+	Date-Added = {2019-03-07 18:51:54 -0500},
+	Date-Modified = {2019-03-07 18:52:38 -0500},
+	Doi = {10.1016/0370-1573(87)90024-X},
+	Journal = {Physics Reports},
+	Month = jan,
+	Pages = {321-375},
+	Title = {{An ontological basis for the quantum theory}},
+	Volume = 144,
+	Year = 1987,
+	Bdsk-Url-1 = {https://doi.org/10.1016/0370-1573(87)90024-X}}
 
 @article{Durr:2013asa,
 	Archiveprefix = {arXiv},
